--- a/html/addChiTietSanPham.html
+++ b/html/addChiTietSanPham.html
@@ -17,6 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="/assets/js/app.module.js"></script>
+
 </head>
 
 <body ng-controller="chiTietSanPhamController">
@@ -30,178 +31,125 @@
             <div class="container-fluid">
 
                 <div class="container mt-5">
-                    <h2 class="text-center">Thêm chi tiết sản phẩm</h2>
-                    <form name="productForm">
-                        <div class="row mb-3">
-                            <div class="col-md-6">
-                                <label>Tên sản phẩm:</label>
-                                <select class="form-select" ng-model="chiTietSanPham.sanPham"
-                                    ng-options="sanPham as sanPham.tenSanPham for sanPham in sanPhams" required>
-                                    <option value="">Chọn tên sản phẩm</option>
-                                </select>
-                            </div>
-                            <div class="col-md-6">
-                                <label>Đế giày:</label>
-                                <select class="form-select" ng-model="chiTietSanPham.deGiay"
-                                    ng-options="deGiay as deGiay.tenDeGiay for deGiay in deGiays" required>
-                                    <option value="">Chọn đế giày</option>
-                                </select>
-                            </div>
+                    <div class="card shadow-lg">
+                        <div class="card-header bg-primary text-white text-center">
+                            <h3>Thêm Chi Tiết Sản Phẩm</h3>
                         </div>
-
-                        <div class="row mb-3">
-                            <div class="col-md-6">
-                                <label>Kích cỡ:</label>
-                                <div class="dropdown">
-                                    <button class="btn btn-secondary dropdown-toggle" type="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
-                                        Chọn kích cỡ
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                        <li ng-repeat="kichCo in kichCos">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox"
-                                                    ng-model="kichCo.selected">
-                                                <label class="form-check-label">{{kichCo.soKichCo}}</label>
-                                            </div>
-                                        </li>
-                                    </ul>
+                        <div class="card-body">
+                            <form name="productForm">
+                                <div class="row mb-3">
+                                    <div class="col-md-6">
+                                        <label for="product" class="form-label">Tên sản phẩm:</label>
+                                        <select id="product" class="form-select" ng-model="productdetail.product"
+                                            ng-options="product as product.productName for product in products"
+                                            required>
+                                            <option value="">Chọn tên sản phẩm</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="material" class="form-label">Chất liệu:</label>
+                                        <select id="material" class="form-select" ng-model="productdetail.material"
+                                            ng-options="material as material.materialName for material in materials"
+                                            required>
+                                            <option value="">Chọn chất liệu</option>
+                                        </select>
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="col-md-6">
-                                <label>Màu sắc:</label>
-                                <div class="dropdown">
-                                    <button class="btn btn-secondary dropdown-toggle" type="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
-                                        Chọn màu sắc
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                        <li ng-repeat="mauSac in mauSacs">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox"
-                                                    ng-model="mauSac.selected">
-                                                <label class="form-check-label">{{mauSac.tenMauSac}}</label>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row mb-3">
-                            <div class="col-md-6">
-                                <label>Chất liệu:</label>
-                                <select class="form-select" ng-model="chiTietSanPham.chatLieu"
-                                    ng-options="chatLieu as chatLieu.tenChatLieu for chatLieu in chatLieus" required>
-                                    <option value="">Chọn chất liệu</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <button type="button" class="btn btn-success" ng-click="taoSanPham()"
-                            ng-disabled="productForm.$invalid">
-                            <i class="fas fa-plus"></i> Tạo Sản Phẩm
-                        </button>
-                    </form>
-
-                    <!-- Hiển thị danh sách sản phẩm theo màu sắc -->
-                    <!-- Hiển thị danh sách sản phẩm theo màu sắc -->
-                    <div ng-repeat="mauSac in mauSacs" ng-if="mauSac.selected">
-                        <p class="text-center" style="font-weight: bold; font-size: 1.25rem;">
-                            Các sản phẩm màu {{mauSac.tenMauSac}}
-                        </p>
-
-                        <table class="table table-bordered mt-3">
-                            <thead class="table-dark">
-                                <tr>
-                                    <th style="width: 5%;">Chọn</th>
-                                    <th style="width: 25%;">Sản phẩm</th>
-                                    <th style="width: 20%;">Số lượng</th>
-                                    <th style="width: 20%;">Đơn giá</th>
-                                    <th style="width: 8%;">Đế giày</th>
-                                    <th style="width: 8%;">Chất liệu</th>
-                                    <th style="width: 8%;">Danh mục</th>
-                                    <th style="width: 8%;">Thương hiệu</th>
-                                    <th style="width: 10%;">Thao tác</th>
-                                </tr>
-                            </thead>
-                            <tbody ng-if="sanPhamPreview.length > 0">
-                                <tr ng-repeat="sp in sanPhamPreview | filter:{'mauSac': mauSac}">
-                                    <td><input type="checkbox" ng-model="sp.chonThem"></td>
-                                    <td>{{sp.sanPham.tenSanPham}} [{{sp.mauSac.tenMauSac}} - {{sp.kichCo.soKichCo}}]
-                                    </td>
-                                    <td><input type="number" ng-model="sp.soLuong" class="form-control form-control-sm">
-                                    </td>
-                                    <td><input type="number" ng-model="sp.giaBan" class="form-control form-control-sm">
-                                    </td>
-                                    <td>{{sp.deGiay.tenDeGiay}}</td>
-                                    <td>{{sp.chatLieu.tenChatLieu}}</td>
-                                    <td>{{sp.danhMuc.tenDanhMuc}}</td>
-                                    <td>{{sp.thuongHieu.tenThuongHieu}}</td>
-                                    <td>
-                                        <button type="button" class="btn btn-primary" ng-click="openImageModal(sp)">
-                                            <i class="fas fa-image"></i> Thêm ảnh
-                                        </button>
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-danger btn-sm" ng-click="xoaSanPham(sp)">
-                                            <i class="fas fa-trash"></i> Xóa
-                                        </button>
-                                    </td>
-                                </tr>
-                                <tr ng-if="sp.selectedImages && sp.selectedImages.length > 0"
-                                    ng-repeat="sp in sanPhamPreview">
-                                    <td colspan="4">
-                                        <div class="image-container">
-                                            <img ng-repeat="image in sp.selectedImages" ng-src="{{getImageUrl(image)}}"
-                                                class="img-thumbnail" alt="Ảnh sản phẩm"
-                                                style="width: 50px; height: 50px; margin: 2px;">
+                                <div class="row mb-3">
+                                    <div class="col-md-6">
+                                        <label class="form-label">Kích cỡ:</label>
+                                        <div class="dropdown">
+                                            <button class="btn btn-outline-primary dropdown-toggle w-100" type="button"
+                                                data-bs-toggle="dropdown" aria-expanded="false">
+                                                Chọn kích cỡ
+                                            </button>
+                                            <ul class="dropdown-menu w-100">
+                                                <li ng-repeat="size in sizes | orderBy:'sizeNumber'">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox"
+                                                            ng-model="size.selected">
+                                                        <label class="form-check-label">{{size.sizeNumber}}</label>
+                                                    </div>
+                                                </li>
+                                            </ul>
                                         </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-
-                    <!-- Modal để chọn ảnh -->
-                    <div id="imageModal" class="modal fade" tabindex="-1" role="dialog">
-                        <div class="modal-dialog modal-lg" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title">Chọn ảnh</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <div class="row">
-                                        <div class="col-md-3" ng-repeat="image in availableImages">
-                                            <div class="card">
-                                                <img ng-src="{{getImageUrl(image)}}" class="card-img-top img-thumbnail"
-                                                    alt="Ảnh">
-                                                <div class="card-body text-center">
-                                                    <input type="checkbox" ng-model="image.selected"> Chọn
-                                                </div>
-                                            </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label class="form-label">Màu sắc:</label>
+                                        <div class="dropdown">
+                                            <button class="btn btn-outline-primary dropdown-toggle w-100" type="button"
+                                                data-bs-toggle="dropdown" aria-expanded="false">
+                                                Chọn màu sắc
+                                            </button>
+                                            <ul class="dropdown-menu w-100">
+                                                <li ng-repeat="color in colors">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox"
+                                                            ng-model="color.selected">
+                                                        <label class="form-check-label">{{color.colorName}}</label>
+                                                    </div>
+                                                </li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
-                                    <button type="button" class="btn btn-primary" ng-click="addImagesToProduct()">Thêm
-                                        ảnh</button>
+                                <div class="d-flex justify-content-center">
+                                    <button type="button" class="btn btn-success px-4" ng-click="taoSanPham()">
+                                        <i class="fas fa-plus"></i> Tạo Sản Phẩm
+                                    </button>
                                 </div>
+                            </form>
+
+                            <!-- Hiển thị danh sách sản phẩm theo màu sắc -->
+                            <div class="mt-4" ng-repeat="color in colors" ng-if="color.selected">
+                                <h5 class="text-center text-primary">Các sản phẩm màu {{color.colorName}}</h5>
+                                <table class="table table-bordered mt-3">
+                                    <thead class="table-dark">
+                                        <tr>
+                                            <th>Chọn</th>
+                                            <th>Sản phẩm</th>
+                                            <th>Số lượng</th>
+                                            <th>Đơn giá</th>
+                                            <th>Chất liệu</th>
+                                            <th>Danh mục</th>
+                                            <th>Thương hiệu</th>
+                                            <th>Thao tác</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr ng-repeat="sp in productPreview | filter:{'color': color}">
+                                            <td><input type="checkbox" ng-model="sp.chonThem"></td>
+                                            <td>{{sp.product.productName}} [{{sp.color.colorName}} -
+                                                {{sp.size.sizeNumber}}]</td>
+                                            <td><input type="number" ng-model="sp.quantity"
+                                                    class="form-control form-control-sm"></td>
+                                            <td><input type="number" ng-model="sp.price"
+                                                    class="form-control form-control-sm"></td>
+                                            <td>{{sp.material.materialName}}</td>
+                                            <td>{{sp.category.categoryName}}</td>
+                                            <td>{{sp.brand.brandName}}</td>
+                                            <td>
+                                                <button class="btn btn-danger btn-sm" ng-click="xoaSanPham(sp)">
+                                                    <i class="fas fa-trash"></i> Xóa
+                                                </button>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
+                            <!-- Nút Thêm sản phẩm chỉ hiển thị nếu có sản phẩm được tạo -->
+                            <div class="d-flex justify-content-center mt-4" ng-if="productPreview.length > 0">
+                                <button type="button" class="btn btn-primary px-4" ng-click="themSanPham()">
+                                    <i class="fas fa-plus-circle"></i> Thêm sản phẩm
+                                </button>
                             </div>
                         </div>
                     </div>
-
-                    <button type="button" class="btn btn-primary" ng-click="themSanPham()">
-                        <i class="fas fa-plus-circle"></i> Thêm sản phẩm
-                    </button>
-
-
                 </div>
+
             </div>
         </div>
     </div>
