--- a/html/mausac.html
+++ b/html/mausac.html
@@ -6,14 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quản Lý Màu Sắc</title>
   <link rel="shortcut icon" type="image/png" href="../assets/images/logos/runflex.jpg" />
-  <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="../assets/css/styles.min.css" />
   <link rel="stylesheet" href="../assets/css/main.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   <script src="../assets/js/main.js"></script>
+  <!-- Thêm Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 </head>
 
 <body ng-controller="ColorController">
@@ -26,8 +28,9 @@
 
       <div class="container-fluid">
         <h1 class="text-center mb-4">QUẢN LÝ MÀU SẮC</h1>
-        <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addModal">Thêm Màu
-          Sắc</button>
+        <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addModal">
+          <i class="fas fa-plus-circle"></i> Thêm Màu Sắc
+        </button>
 
         <!-- Modal Thêm Màu Sắc -->
         <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
@@ -41,9 +44,11 @@
                 <form id="addColorForm" ng-submit="addColor()">
                   <div class="mb-3">
                     <label for="colorName" class="form-label">Tên Màu Sắc</label>
-                    <input type="text" class="form-control" id="colorName" ng-model="color.colorName" required>
+                    <input type="text" class="form-control" id="colorName" ng-model="color.colorName">
                   </div>
-                  <button type="submit" class="btn btn-primary">Lưu</button>
+                  <button type="submit" class="btn btn-primary">
+                    <i class="fas fa-save"></i> Lưu
+                  </button>
                 </form>
               </div>
             </div>
@@ -69,22 +74,32 @@
                   <input ng-if="color.isEditing" type="text" ng-model="color.colorName" style="flex: 1;" />
                 </td>
                 <td>
-                  <span ng-class="{'badge bg-success': color.status == 1, 'badge bg-danger': color.status != 1}">
+                  <span ng-if="!color.isEditing" class="badge"
+                    ng-class="{'bg-success': color.status == 1, 'bg-danger': color.status != 1}">
                     {{ color.status == 1 ? 'Hoạt Động' : 'Ngưng Hoạt Động' }}
                   </span>
+                  <select ng-if="color.isEditing" class="form-select" ng-model="color.status" ng-options="color.status">
+                    <option value="1">Hoạt Động</option>
+                    <option value="0">Ngưng Hoạt Động</option>
+                  </select>
                 </td>
                 <td class="text-center">
                   <button type="button" class="btn btn-warning btn-sm" ng-click="toggleEdit(color)">
-                    {{ color.isEditing ? 'Lưu' : 'Sửa' }}
+                    <i class="fas fa-edit"></i> {{ color.isEditing ? 'Lưu' : 'Sửa' }}
                   </button>
                   <button type="button" class="btn btn-secondary btn-sm" ng-if="color.isEditing"
-                    ng-click="cancelEdit(color)">Hủy</button>
-                  <button type="button" class="btn btn-danger btn-sm" ng-click="deleteColor(color.id)">Xóa</button>
+                    ng-click="cancelEdit(color)">
+                    <i class="fas fa-times"></i> Hủy
+                  </button>
+                  <button type="button" class="btn btn-danger btn-sm" ng-click="deleteColor(color.id)">
+                    <i class="fas fa-trash-alt"></i> Xóa
+                  </button>
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
+
       </div>
     </div>
   </div>
