--- a/RunFlexFE/public/index.html
+++ b/RunFlexFE/public/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/sign.css">
     <link rel="stylesheet" href="css/sign.css.map">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
     <!-- Link CSS và JS của SweetAlert -->
@@ -27,6 +30,7 @@
     <script src="controller/cartController.js"></script>
     <script src="controller/demo.js"></script>
     <script src="controller/accountController.js"></script>
+    <script src="controller/userController.js"></script>
     <link rel="stylesheet" href="plugins/uikit/uikit.min.css" />
     <link rel="stylesheet" href="css/productDetail.css">
     <title>Runner</title>
